Updated Swagger Docs
